UF-9396: Added municipality id as path parameter