@@ -1,17 +1,10 @@
 package se.sundsvall.notes.apptest;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.groups.Tuple.tuple;
-import static org.springframework.http.HttpHeaders.LOCATION;
-
-import java.util.List;
-
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
-
 import se.sundsvall.dept44.test.AbstractAppTest;
 import se.sundsvall.dept44.test.annotation.wiremock.WireMockAppTestSuite;
 import se.sundsvall.notes.Application;
@@ -20,13 +13,20 @@ import se.sundsvall.notes.integration.db.NoteRepository;
 import se.sundsvall.notes.integration.db.RevisionRepository;
 import se.sundsvall.notes.integration.db.model.NoteEntity;
 
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.groups.Tuple.tuple;
+import static org.springframework.http.HttpHeaders.LOCATION;
+
 /**
  * Create note apptests.
  */
 @WireMockAppTestSuite(files = "classpath:/CreateNoteIT/", classes = Application.class)
 class CreateNoteIT extends AbstractAppTest {
 
-	private final static String MUNICIPALITY_ID = "2281";
+	private static final String MUNICIPALITY_ID = "2281";
+	private static final String REQUEST= "request.json";
 
 	@Autowired
 	private NoteRepository noteRepository;
@@ -35,25 +35,25 @@ class CreateNoteIT extends AbstractAppTest {
 	private RevisionRepository revisionRepository;
 
 	@Test
-	void test01_createNoteWithPartyId() throws Exception {
+	void test01_createNoteWithPartyId() {
 
 		final var partyId = "ffd20e9d-5987-417a-b8cd-a4617ac83a88";
 
-		assertThat(noteRepository.findAllByParameters(FindNotesRequest.create().withPartyId(partyId).withMunicipalityId(MUNICIPALITY_ID), PageRequest.of(0, 100))).isEmpty();
+		assertThat(noteRepository.findAllByParameters(FindNotesRequest.create().withPartyId(partyId), PageRequest.of(0, 100), MUNICIPALITY_ID)).isEmpty();
 
 		setupCall()
-			.withServicePath("/notes")
+			.withServicePath("/2281/notes")
 			.withHttpMethod(HttpMethod.POST)
-			.withRequest("request.json")
+			.withRequest(REQUEST)
 			.withExpectedResponseStatus(HttpStatus.CREATED)
-			.withExpectedResponseHeader(LOCATION, List.of("^/notes/(.*)$"))
+			.withExpectedResponseHeader(LOCATION, List.of("^/2281/notes/(.*)$"))
 			.withExpectedResponseHeader("x-current-revision", List.of("(.*)-(.*)-(.*)-(.*)-(.*)"))
 			.withExpectedResponseHeader("x-current-version", List.of("0"))
 			.sendRequestAndVerifyResponse();
 
-		final var noteList = noteRepository.findAllByParameters(FindNotesRequest.create().withPartyId(partyId).withMunicipalityId(MUNICIPALITY_ID), PageRequest.of(0, 100));
+		final var noteList = noteRepository.findAllByParameters(FindNotesRequest.create().withPartyId(partyId), PageRequest.of(0, 100), MUNICIPALITY_ID);
 		assertThat(noteList.getContent()).hasSize(1);
-		final var note = noteList.getContent().get(0);
+		final var note = noteList.getContent().getFirst();
 
 		assertThat(note.getBody()).isEqualTo("This is a note");
 		assertThat(note.getCaseId()).isEqualTo("12345");
@@ -65,27 +65,27 @@ class CreateNoteIT extends AbstractAppTest {
 		assertThat(note.getMunicipalityId()).isEqualTo("2281");
 
 		// Assert that we only have the first version (version zero).
-		assertThat(revisionRepository.findFirstByEntityIdOrderByVersionDesc(note.getId()).orElseThrow().getVersion()).isZero();
+		assertThat(revisionRepository.findFirstByEntityIdAndMunicipalityIdOrderByVersionDesc(note.getId(), MUNICIPALITY_ID).orElseThrow().getVersion()).isZero();
 	}
 
 	@Test
-	void test02_createNoteWithoutPartyId() throws Exception {
+	void test02_createNoteWithoutPartyId() {
 
 		final var client = "MyGreatClient";
 
-		assertThat(noteRepository.findAllByParameters(FindNotesRequest.create().withMunicipalityId(MUNICIPALITY_ID).withClientId(client), PageRequest.of(0, 100))).isEmpty();
+		assertThat(noteRepository.findAllByParameters(FindNotesRequest.create().withClientId(client), PageRequest.of(0, 100), MUNICIPALITY_ID)).isEmpty();
 
 		setupCall()
-			.withServicePath("/notes")
+			.withServicePath("/2281/notes")
 			.withHttpMethod(HttpMethod.POST)
-			.withRequest("request.json")
+			.withRequest(REQUEST)
 			.withExpectedResponseStatus(HttpStatus.CREATED)
-			.withExpectedResponseHeader(LOCATION, List.of("^/notes/(.*)$"))
+			.withExpectedResponseHeader(LOCATION, List.of("^/2281/notes/(.*)$"))
 			.withExpectedResponseHeader("x-current-revision", List.of("(.*)-(.*)-(.*)-(.*)-(.*)"))
 			.withExpectedResponseHeader("x-current-version", List.of("0"))
 			.sendRequestAndVerifyResponse();
 
-		assertThat(noteRepository.findAllByParameters(FindNotesRequest.create().withClientId(client), PageRequest.of(0, 100))).hasSize(1)
+		assertThat(noteRepository.findAllByParameters(FindNotesRequest.create().withClientId(client), PageRequest.of(0, 100), MUNICIPALITY_ID)).hasSize(1)
 			.extracting(
 				NoteEntity::getBody,
 				NoteEntity::getCaseId,
